# Nmap Changelog ($Id$); -*-text-*-

o [Nmap, Nping] Fixed the fragmentation options (-f in Nmap, --mtu in
  both) which broke in 5.35DC1. Instead of sending multiple fragments,
  the original packet was sent whole. In some circumstances, sending
  would fail on interfaces with low MTUs (such as SLIP lines) with no
  way to bump down packet sizes for transport. [Kris]

o [NSE] The http library's request functions now accept an additional
  "auth" table within the option table, which if provided causes Basic
  authentication credentials to be sent. [David]

o [NSE] When receiving raw packets from Pcap, the packet capture time
  is now available to scripts as an additional return value from
  pcap_receive().  It is returned as the floating point number of
  seconds since the epoch. [Kris]

o [NSE] Added the nmap.clock() function which returns the current time
  as floating point seconds since the epoch.  Convenience functions
  clock_ms() and clock_us() were added to stdnse to return the current
  time in milliseconds and microseconds, respectively. [Kris]

o [NSE] The qscan.nse script was updated to use the more accurate
  timing data from pcap_receive() and clock() to provide microsecond
  resolution for round-trip times. [Kris]

o [Zenmap] Fixed a crash that would happen after opening the search
  window, entering a relative date criterion such as "after:-7", and
  then clicking the "Expressions" button. The error message was
    AttributeError: 'tuple' object has no attribute 'strftime'
  [David]

o [zenmap] Added a new Script selection Interface. This interface is 
  present under the "Scripting" tab of profile editor. Besides selecting 
  script,argument values can also be given. Description and categories 
  of script is also shown.
  [kirubakaran]


Nmap 5.35DC1 [2010-07-16]

o [NSE] Added 17 scripts, bringing the total to 131! They are
  described individually in the CHANGELOG, but here is the list of new
  ones: